Closed
Bug 1645544
Opened 5 years ago
Closed 5 years ago
JSProcessActors crash on some observers
Categories
(Core :: DOM: Content Processes, defect)
Core
DOM: Content Processes
Tracking
()
RESOLVED
FIXED
mozilla79
| Tracking | Status | |
|---|---|---|
| firefox79 | --- | fixed |
People
(Reporter: enndeakin, Assigned: enndeakin)
References
Details
Attachments
(1 file)
I've found that JSProcessActor crashes sometimes in JSProcessActorProtocol::Observe because ContentChild::GetSingleton returns null. I suspect that some observer notifications happen during process startup/shutdown.
The following is one such try-run that crashed:
https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=305949916&repo=try&lineNumber=6458
| Assignee | ||
Comment 1•5 years ago
|
||
Pushed by neil@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/d7f5ae0739a6
null-check on ContentChild to prevent crash, r=nika
Comment 3•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox79:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla79
You need to log in
before you can comment on or make changes to this bug.
Description
•