Bug 1645544, null-check on ContentChild to prevent crash, r=nika

Differential Revision: https://phabricator.services.mozilla.com/D79607